<resources>
    <string name="app_name">Take Water</string>
    <string name="see_staticts">See statistics</string>
    <string name="statistics">Statistics</string>
    <string name="save_settings">Save settings</string>
    <string name="settings">Settings</string>

    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">Yestarday</string>
    <string name="tab_text_3">All</string>

    <string name="date">Date</string>
    <string name="schedule">Schedule</string>
    <string name="hour">h</string>
    <string name="minute">min</string>
    <string name="quantidade">The amount</string>

    <string name="excluido_com_sucesso">Successfully deleted!</string>
    <string name="excluido_sem_sucesso">Couldn\'t delete.</string>
    <string name="remind">You will be remembered in 10 minutes.</string>

    <string name="couldnt_save_changes">Couldn\'t save changes.</string>
    <string name="choose_an_option">Choose an option.</string>
    
    <string name="average">Averade</string>
    <string name="total">Total</string>

    <string name="there_is_no_data">There is no data.</string>

    <string name="every_time_you_drank_water_today">Every time you drank water today</string>
    <string name="every_time_you_drank_water_yestarday">Every time you drank water yesterday</string>
    <string name="every_time_you_drank_water">Every time you drank water.</string>

    <string name="its_time_to_drink_some_water">It\'s time to drink some water.</string>
    <string name="drink">Drink</string>
    <string name="put_off">Put off</string>

    <string name="notification">Notification</string>
    <string name="enable_alarm_and_notification">Enable alarm and notification</string>
    <string name="enable_notification_only">Enable notification only</string>
    <string name="do_not_activate_alarm_or_notification">Do not activate alarm or notification</string>
    <string name="notification_interval_time">Notification interval time</string>
    <string name="amount_of_water">Amount of water</string>
    <string name="value_in_ml">Value in ML</string>

    <string-array name="periodo_estatistica">
        <item>last 3 days</item>
        <item>last 7 days</item>
        <item>last 30 days</item>
        <item>last 90 days</item>
        <item>last 180 days</item>
        <item>last 270 days</item>
        <item>last 360 days</item>
    </string-array>

    <string-array name="array_time_interval">
        <item>30 min</item>
        <item>35 min</item>
        <item>40 min</item>
        <item>45 min</item>
        <item>50 min</item>
        <item>55 min</item>
        <item>1 h</item>
        <item>2 h</item>
        <item>3 h</item>
    </string-array>

    <string name="no_ads">• No ads</string>
    <string name="buy_now">Buy now</string>
    <string name="developed">powered by Romoufer</string>
    <string name="version">version 1.0</string>
    <string name="this_version_is_pro">This version is PRO.</string>

</resources>